Fixed size and overflow bug

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -8,8 +8,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: transparent;
 }
 
-html{
+html, body, .root{
     scroll-behavior: smooth;
+    overflow-y: visible;
 }
 
 *{
@@ -19,6 +20,7 @@ html{
 
 .page{
     min-height: 100vh;
+    overflow-y: visible;
 }
 
 a.link{
