--- a/src/client/pages/v2/Presentation/slides/Gliederung/styles.scss
+++ b/src/client/pages/v2/Presentation/slides/Gliederung/styles.scss
@@ -82,6 +82,7 @@
                     border: 4px solid gold;
                     width: max-content;
                     max-width: 350px;
+                    min-width: 200px;
                 }
             }
         }
