--- a/src/client/pages/v2/Presentation/styles.scss
+++ b/src/client/pages/v2/Presentation/styles.scss
@@ -30,6 +30,7 @@
         flex-direction: column;
         align-items: stretch;
         justify-content: center;
+        overflow-y: visible;
     }
 
     .step{
